<resources>
    <string name="app_name">Self_service_gate</string>
    <string name="app_desc">乌鲁木齐国际机场安全检查总站\n 证件查验自助闸机信息管理系统PAD端</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="copyright">© 2019 版权所有 新疆民航凯亚信息网络有限责任公司</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="job_scheduling">工作调度界面</string>
    <string name="personnel_selection">工作人员选择</string>
    <string name="mine">我的</string>
    <string name="Passenger_second_verification">旅客二次验证</string>
    <string name="gate">闸机</string>
    <string name="team_member">组员：</string>
    <string name="post">岗位：</string>
    <string name="candidate">待选人员</string>
    <string name="linedup">已排岗位</string>
    <string name="adjustment_staff">调整人员</string>
    <string name="confirm_to_work">确认上岗</string>
    <string name="confirm_laid_off">确认下岗</string>
    <string name="flight_no">航班号：</string>
    <string name="passenger_name">旅客姓名：</string>
    <string name="nation">民族：</string>
    <string name="Verification_failed_passenger">验证失败旅客</string>
    <string name="Blacklist_travelers">黑名单旅客013</string>
    <string name="Priority_passengers">重点旅客</string>
    <string name="Late_travelers">晚到旅客</string>
    <string name="Whitelist_travelers">白名单旅客</string>
    <string name="check_update">检查更新</string>
    <string name="user_agreement">用户协议</string>
    <string name="log_off">退出登录</string>
</resources>
