<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ContainerFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="160px"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/job_scheduling"
        android:textColor="@color/white"
        android:textSize="64px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="240px"
        android:layout_height="0dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <TextView
            android:id="@+id/tv_personnel_selection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/personnel_select"
            android:drawablePadding="13px"
            android:gravity="center"
            android:paddingTop="37px"
            android:paddingBottom="47px"
            android:text="@string/personnel_selection"
            android:textColor="@color/white"
            android:textSize="30px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="2px"
            android:background="@color/blue_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_personnel_selection" />

        <TextView
            android:id="@+id/tv_passenger_second_verification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/not_selected"
            android:drawablePadding="13px"
            android:gravity="center"
            android:paddingTop="37px"
            android:paddingBottom="47px"
            android:text="@string/Passenger_second_verification"
            android:textColor="@color/white"
            android:textSize="30px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <View
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="2px"
            android:background="@color/blue_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_passenger_second_verification" />


        <TextView
            android:id="@+id/tv_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/me"
            android:drawablePadding="13px"
            android:gravity="center"
            android:paddingTop="37px"
            android:paddingBottom="47px"
            android:text="@string/mine"
            android:textColor="@color/white"
            android:textSize="30px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view1" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="2px"
            android:background="@color/blue_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_me" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/constraint"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

</androidx.constraintlayout.widget.ConstraintLayout>